fix scrollbar (#2)

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(7, 7, 7);
+    overflow: hidden;
 }
 @keyframes driveby {
     0% {left: 150vw;}
